<resources>
    <string name="app_name">02_UI_Design</string>

    <string name="ringtone">Beltoon</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="volIncoming">Volume van inkomende oproepen gebruiken voor meldingen</string>
    <string name="mention">Melding</string>
    <string name="ok">Ok</string>
    <string name="reset">Reset</string>
</resources>
